<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E7FFF4"
        tools:context=".TestActivity"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:id="@+id/Status"
            android:layout_width="352dp"
            android:layout_height="50dp"
            android:text="@string/status"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="340dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="352dp"
            android:layout_height="50dp"
            android:text="@string/student_attendance_record"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="277dp" />

        <TextView
            android:id="@+id/EmailText"
            android:layout_width="352dp"
            android:layout_height="50dp"
            android:text="@string/email"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="216dp" />

        <TextView
            android:id="@+id/LastNameText"
            android:layout_width="352dp"
            android:layout_height="50dp"
            android:text="@string/last_name"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="158dp" />

        <Button
            android:id="@+id/HomeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:text="Home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/ClassesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="89dp"
            android:text="Classes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/MessagesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="188dp"
            android:text="Messages"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/SettingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="292dp"

            android:text="Settingss"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="114dp"
            android:layout_height="109dp"
            android:layout_marginStart="295dp"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/attendance_" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="HomeButton,ClassesButton,MessagesButton,SettingsButton"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/FirstNameText"
            android:layout_width="352dp"
            android:layout_height="50dp"
            android:text="@string/first_name"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="100dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>